# pose_classification

./: .gitignore  CMakeLists.txt  README.md  classifier.cpp  classifier.h  darknet_demo.py  data_format.h  data_format.py  detector.cpp  detector.h  load_data.py  main.cpp  pose_encoder.cpp  pose_encoder.h  pose_estimator.cpp  pose_estimator.h  requirements.txt  test.py  tracker.cpp  tracker.h  utils.h
classification/: pose_classifier.py
detection/: darknet_lib.py  detector.py
libs/: darknet.h  yolo_v2_class.hpp
pose_estimation/: pose_estimator.py  simple_transform.py
tracking/: kalman_filter.py  kalman_tracker.py  tracker.py
utils/: input_queue.py  pose_type.h  registry.py  simple_transform.cpp  simple_transform.h  transform.py  transforms.py  visualize.py
